general/platform-components/helm/kyverno-policies/tests/bestPractices/values.yaml
---
bestPractices:
  enabled: true
  disallowDefaultNamespace:
    enabled: true
    webhookFailurePolicy: Fail
    enableBackgroundScanning: true
    actionOverride: Enforce
  requirePodDisruptionBudget:
    enabled: true
    webhookFailurePolicy: Fail
    enableBackgroundScanning: true
    actionOverride: Enforce
  requireReadOnlyRootFilesystem:
    enabled: true
    webhookFailurePolicy: Fail
    enableBackgroundScanning: true
    actionOverride: Enforce
