general/platform-components/helm/kyverno-policies/tests/bestPractices/context.yaml
---
apiVersion: cli.kyverno.io/v1alpha1
kind: Context
metadata:
  name: context
spec:
  resources:
    - apiVersion: policy/v1
      kind: PodDisruptionBudget
      metadata:
        name: test-pdb
        namespace: kyverno-test
      spec:
        minAvailable: 1
        selector:
          matchLabels:
            app: test
